# dotfiles

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  README.md  biome.json  direnvrc  fabfile.py  gitconfig  gitmessage  install.sh  ssh-config  ssh_config  vimrc
.github/: super-linter.github.env  super-linter.local.env
aws/: README.md  aws_session__ps1.py  pyproject.toml
bash/: available.bash  bash_colours  bash_profile  bash_profile.bash  bash_profile.cyclone  bash_profile.lib.bash  bash_profile.local.cyclone  bash_profile.local.sirocco  bash_profile.local.waterwheel  bash_profile.sirocco.bash  bash_profile.waterwheel.bash  bashrc  cacheme.bash  colours.lib.bash  functions.lib.bash  git_completion.lib.bash  git_prompt.bash  pr-aws.lib.bash
bash/lib/: available.bash  aws_sso.lib.bash  colours.lib.bash  functions.lib.bash  kubenates.lib.sh
byobu/: .byobu  .ssh-agent  byobu  byobu.disk_read  byobu.disk_write  byobu.network_down  byobu.network_up  keybindings  status  ui25092012dd8406599afb13a82c408be151b123f4?d=AEl785fb4aa34a52246883113a2c89a45f3
claude/: CLAUDE.md
claude/feedback/: MEMORY.md  feedback_ask_dont_guess.md  feedback_draft_prs.md  feedback_jq_over_python.md  feedback_pr_review_workflow.md  feedback_precommit.md  feedback_verify_commands.md
ssh/: bitbucket-weakcrypto.ssh  bitwarden-agent-bridge.bash
ssh/authorized_keys.d/: cyclone  grupel
sublime-text-2/Settings/: Auto Save Session.sublime_session  License.sublime_license  Session.sublime_session
vault/: byobu.tar.bz2  fabfile.py  slrnrc
(+1 files in other folders)
